--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body class="overflow-x-hidden">
    
    
-    <div class="w-screen">
+    <div class="w-screen h-screen">
 
         <div class="flex border-b mb-2 border-gray-400 items-center flex-wrap  gap-2">
 
